chore: changed url

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="css/themify-icons.css" rel="stylesheet">
     <link href='css/dosis-font.css' rel='stylesheet' type='text/css'>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".side-menu">
 
