--- a/index.html
+++ b/index.html
@@ -351,54 +351,46 @@
             },
             async submitForm() {
 
-                const btn = document.getElementById('submit_btn')
-                btn.addEventListener('click', (event) => {
-                    this.message = 'клик'
-                })
+                // Проверка на заполненность обязательных полей
+                if (!this.formData.name || !this.formData.surname || !this.formData.organization || !this.formData.position) {
+                    this.submitted = false
+                    this.error = true
+                    this.message = 'Пожалуйста, заполните все обязательные поля';
+                    return;
+                }
 
-                btn.addEventListener('touchstart', (event) => {
-                    this.message = 'касание'
-                })
+                try{
+                    document.addEventListener('DOMContentLoaded', () => {
+                        if (window.Telegram && window.Telegram.WebApp) {
+                            console.log('Telegram Web App is available!');
+                            console.log(window.Telegram.WebApp)
 
-                // // Проверка на заполненность обязательных полей
-                // if (!this.formData.name || !this.formData.surname || !this.formData.organization || !this.formData.position) {
-                //     this.submitted = false
-                //     this.error = true
-                //     this.message = 'Пожалуйста, заполните все обязательные поля';
-                //     return;
-                // }
-                //
-                // try{
-                //     document.addEventListener('DOMContentLoaded', () => {
-                //         if (window.Telegram && window.Telegram.WebApp) {
-                //             console.log('Telegram Web App is available!');
-                //             console.log(window.Telegram.WebApp)
-                //         } else {
-                //             console.error('Telegram Web App is NOT available.');
-                //             console.log('URL', window.location.href); // выведет текущий URL, для отладки
-                //             return 'Не удалось получить инициализировать Telegram Web App. Запустите бот @bingosoft_msk'
-                //         }
-                //     });
-                //
-                //     let data = JSON.stringify({
-                //         name: this.formData.name,
-                //         surname: this.formData.surname,
-                //         organization: this.formData.organization,
-                //         position: this.formData.position,
-                //         telegram_id: this.formData.telegram_id === '' ? 0 :  parseInt(this.formData.telegram_id)
-                //     })
-                //
-                //     window.Telegram.WebApp.sendData(JSON.stringify(data));
-                //
-                //     this.submitted = true
-                //     this.error = false
-                //     this.message = 'Данные успешно отправлены'
-                //
-                // } catch (e){
-                //     this.submitted = false
-                //     this.error = true
-                //     this.message = 'Ошибка: internal server error'
-                // }
+                            let data = JSON.stringify({
+                                name: this.formData.name,
+                                surname: this.formData.surname,
+                                organization: this.formData.organization,
+                                position: this.formData.position,
+                                telegram_id: this.formData.telegram_id === '' ? 0 :  parseInt(this.formData.telegram_id)
+                            })
+
+                            window.Telegram.WebApp.sendData(JSON.stringify(data));
+
+                            this.submitted = true
+                            this.error = false
+                            this.message = 'Данные успешно отправлены'
+                        } else {
+                            console.error('Telegram Web App is NOT available.');
+                            console.log('URL', window.location.href); // выведет текущий URL, для отладки
+                            this.message = 'Не удалось получить инициализировать Telegram Web App. Запустите бот @bingosoft_msk'
+                            this.error = true
+                            this.submitted = false
+                        }
+                    });
+                } catch (e){
+                    this.submitted = false
+                    this.error = true
+                    this.message = 'Ошибка: internal server error'
+                }
             }
         }
     };
