--- a/index.html
+++ b/index.html
@@ -357,10 +357,12 @@
                     return;
                 }
 
+                console.log('telegram_id', this.formData.telegram_id)
                 if (this.formData.telegram_id === '') {
                     this.submitted = false;
                     this.error = false;
                     this.message = 'Не удалось определить telegram_id. Запустите бот @bingosoft_msk.'
+                    return;
                 }
 
                 try {
