--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
 <!-- End: Navbar -->
 
 <!-- Start: Header -->
-<div class="container">
+<div class="container header-block">
     <div class="container-fluid">
         <div class="row hero-header" id="home">
-            <div class="col-md-7">
+            <div class="">
+                <img src="img/bingo-logo3.png" class="rocket animated bounce">
+            </div>
+            <div class="">
                 <h1 class="text-header">БИНГО-СОФТ</h1>
                 <h2 class="text-header">MSK MEETUP 2025</h2>
                 <div class="text-header" id="timer"></div>
                 <a href="#block-registration" class="btn btn-lg btn-red page-scroll" id="reg-btn">Регистрация
                     <span class="ti-arrow-right"></span>
                 </a>
-            </div>
-            <div class="col-md-5">
-                <img src="img/bingo-logo3.png" class="rocket animated bounce">
             </div>
         </div>
     </div>
