--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <img src="img/bingo-logo3.png" class="rocket animated bounce">
             </div>
             <div class="">
-                <h1 class="text-header">БИНГО-СОФТ</h1>
-                <h2 class="text-header">MSK MEETUP 2025</h2>
+                <h1 class="text-header">BingoSoft</h1>
+                <h2 class="text-header">PRO MEETUP 2025</h2>
                 <div class="text-header" id="timer"></div>
                 <a href="#block-registration" class="btn btn-lg btn-red page-scroll" id="reg-btn">Регистрация
                     <span class="ti-arrow-right"></span>
